src/objects/AuditInitializerConfig__c.object
<CustomObject>
    <customHelpPage>AuditInitializerConfigCsh</customHelpPage>
    <fields>
        <fullName>DynamicGroupIdentifierObjectName__c</fullName>
        <inlineHelpText>What type of object did the field name come from?</inlineHelpText>
        <label>Dynamic Group Identifier Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DynamicGroupIdentifier__c</fullName>
        <inlineHelpText>What field name from the message data arriving at this step, will be used to name the Audit Group?</inlineHelpText>
        <label>Dynamic Group Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StaticGroupIdentifier__c</fullName>
        <description>Enter any static business key (eg INVOICE, PAYSLIP, etc) to  describe the grouping.  Alternatively ,leave blank  to enable a system generated identifier.</description>
        <inlineHelpText>What text (eg INVOICE, PAYSLIP, etc) will be used to name the Audit Groups created at this step?</inlineHelpText>
        <label>Static Group Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Audit Config</label>
    <nameField>
        <label>What does this step do?</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>